# CL-AI

./: README.md  cmd_ai.py  pyproject.toml  requirements.txt  test_cmd_ai.py
.github/workflows/: python-ci.yml
cl_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
cmd_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
